ignore o diretorio .phpintel

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,4 @@
 /vendor
 /node_modules
 .env
-.phpintel/1ba5de8a3470c80d59d81f870ff582aa
-.phpintel/265482ad32fd2f97247144510934441b
-.phpintel/38f342481d9351addd3b34deb3ff571f
-.phpintel/3bef952c2dd71544f1842d5da136acb5
-.phpintel/3cf77e193b4f4aaf57992be05f0f5edf
-.phpintel/5298ed1e33615107129bebbbf4603c6d
-.phpintel/5828d37607a16b943d850ef4be4c0c81
-.phpintel/8ccbad2b79fcd9210a0b097085b62c7a
-.phpintel/a552c9a4db5c563a95861ec83f068094
-.phpintel/b3392b3c75596d6523c2432d49654fe2
-.phpintel/ba3af5ac9104abfaefe867860d833bfd
-.phpintel/c306f083954c3813d6b20802406f57d1
-.phpintel/c3b7588da28123dc4fd87189c425dfd9
-.phpintel/cac64e2e22e5c567b7b1715af4c08523
-.phpintel/ffbd90d89d91d60ec5f7b41da943fb0a
-.phpintel/index
+.phpintel/
